# drf_homework

./: .env  .env.sample  Dockerfile  README.md  coverage.txt  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
fixtures/: materials.json  payments.json  users.json
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_course_owner_lesson_owner.py  0004_subscription.py
users/: models.py  permissions.py  serilizers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_date.py  0004_payment_link_payment_session_id.py
